# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-04-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add url-path RequestInfo parameter to cloudi_service_http_elli
    * Add cloudi_service_filesystem initialization configuration for
      notify_one and notify_all (these should be preferred to avoid
      problems after service crashes)
    * Add cloudi_service_filesystem notify_on_start
      initialization configuration to provide simpler
      file-based initialization for dependent services

2014-04-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add url-path RequestInfo parameter so that
      service name parsing isn't necessary
      (to cloudi_service_http_cowboy)
    * Add cloudi_service_filesystem interface functions
      notify_all, notify_one, notify_clear to receive
      file update notifications

2014-04-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update syslog dependency source

2014-03-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add process_index, process_count, process_count_max, and
      process_count_min to all CloudI API implementations

2014-03-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix ec2 discovery groups/tags validation for syntax additions

2014-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder to add support for boolean expressions when using
      ec2 with tags and/or groups
    * Enforce a minimum node reconnect time based
      on the configured net_kernel:connecttime/0

2014-03-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_api:nodes_set/2 for dynamically configuring
      CloudI nodes configuration

2014-03-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add more flexible nodes configuration
    * Update nodefinder (a rewrite) and remove the older nodefinder cruft
    * Support EC2 Erlang node auto-discovery based on