@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-04-08 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add service name pattern support to cloudi_service_router
+    * Fix the run_erl logging settings for the erlang.log.? files
+
 2014-04-07 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add url-path RequestInfo parameter to cloudi_service_http_elli
